--- a/ormconfig.json
+++ b/ormconfig.json
@@ -4,7 +4,7 @@
     "port": 3306,
     "username": "root",
     "password": "",
-    "database": "recipesdb",
+    "database": "dbrecipes",
     "entities": ["dist/entity/**/*.js"],
     "synchronize":true
  }
