--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build":"tsc",
+    "build": "tsc",
     "start": "node dist/index.js",
-    "dev":"tsc-watch --onSuccess \"node dist/index.js\" "
+    "dev": "nodemon src/index.ts --exec ts-node"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^2.18.2",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
+    "type-graphql": "^1.0.0",
     "typeorm": "^0.2.28"
   },
   "devDependencies": {
@@ -24,6 +29,7 @@
     "@types/express": "^4.17.8",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.11.8",
+    "nodemon": "^2.0.4",
     "typescript": "^4.0.3"
   }
 }
