--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts --exec ts-node"
+    "dev": "tsc watch --onSuccess \"node dist/index.js\""
   },
   "keywords": [],
   "author": "",
