--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "tsc watch --onSuccess \"node dist/index.js\""
+    "dev": "tsc-watch --onSuccess \"node dist/index.js\" "
   },
   "keywords": [],
   "author": "",
@@ -30,6 +30,7 @@
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.11.8",
     "nodemon": "^2.0.4",
+    "tsc-watch": "^4.2.9",
     "typescript": "^4.0.3"
   }
 }
